Написание слоёв и БД-2  + Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 server.contextPath=/
 
 # Security
-security.oauth2.resource.userInfoUri=http://localhost:9000/user
+security.oauth2.resource.userInfoUri=http://localhost:9000/person
 security.oauth2.client.client-id=a
 security.oauth2.client.client-secret=password
 # Datasource
